; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_storage_sync.c_fdfs_binlog_compress_func.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_storage_sync.c_fdfs_binlog_compress_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH_SIZE = common dso_local global i32 0, align 4
@binlog_compress_index = common dso_local global i32 0, align 4
@g_binlog_index = common dso_local global i32 0, align 4
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fdfs_binlog_compress_func(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %10 = load i32, i32* @MAX_PATH_SIZE, align 4
  %11 = zext i32 %10 to i64
  %12 = call i8* @llvm.stacksave()
  store i8* %12, i8** %4, align 8
  %13 = alloca i8, i64 %11, align 16
  store i64 %11, i64* %5, align 8
  %14 = load i32, i32* @binlog_compress_index, align 4
  %15 = load i32, i32* @g_binlog_index, align 4
  %16 = icmp sge i32 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  store i32 1, i32* %9, align 4
  br label %45

18:                                               ; preds = %1
  %19 = call i32 (...) @calc_compress_until_binlog_index()
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* @binlog_compress_index, align 4
  store i32 %20, i32* %7, align 4
  br label %21

21:                                               ; preds = %41, %18
  %22 = load i32, i32* %7, align 4
  %23 = load i32, i32* %6, align 4
  %24 = icmp slt i32 %22, %23
  br i1 %24, label %25, label %44

25:                                               ; preds = %21
  %26 = load i32, i32* %7, align 4
  %27 = call i32 @get_binlog_readable_filename_ex(i32 %26, i8* %13)
  %28 = call i32 @compress_binlog_file(i8* %13)
  store i32 %28, i32* %8, align 4
  %29 = load i32, i32* %8, align 4
  %30 = icmp eq i32 %29, 0
  br i1 %30, label %36, label %31

31:                                               ; preds = %25
  %32 = load i32, i32* %8, align 4
  %33 = load i32, i32* @ENOENT, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %36, label %35

35:                                               ; preds = %31
  br label %44

36:                                               ; preds = %31, %25
  %37 = load i32, i32* %7, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* @binlog_compress_index, align 4
  %39 = load i32, i32* @g_binlog_index, align 4
  %40 = call i32 @write_to_binlog_index(i32 %39)
  br label %41

41:                                               ; preds = %36
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %7, align 4
  br label %21

44:                                               ; preds = %35, %21
  store i32 0, i32* %2, align 4
  store i32 1, i32* %9, align 4
  br label %45

45:                                               ; preds = %44, %17
  %46 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %46)
  %47 = load i32, i32* %2, align 4
  ret i32 %47
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @calc_compress_until_binlog_index(...) #2

declare dso_local i32 @get_binlog_readable_filename_ex(i32, i8*) #2

declare dso_local i32 @compress_binlog_file(i8*) #2

declare dso_local i32 @write_to_binlog_index(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
